--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 .landing {
    background-color: rgb(245, 216, 187);
    opacity: .8;
-   height: 600px;
-   width: 100%;
+   height: 650px;
    padding: 50px;
    margin: -10px;
 }
@@ -11,4 +10,30 @@ h1 {
    color: #fff;
    font-size: 5em;
    margin: 75px 125px;
+}
+
+h2 {
+   text-transform: uppercase;
+   color: #f4eee9;
+   position: relative;
+   right: -400px;
+}
+
+body {
+   overflow-x: hidden;
+}
+
+.product {
+   margin: 50px;
+   padding: 50px;
+   border: solid 1px; /* Temporary */
+   transition: 5s;
+}
+
+.product:hover .product-image {
+   /* Move right into screen */
+}
+
+.product:hover .product-text {
+   /* Move right into screen */
 }
