--- a/store.css
+++ b/store.css
@@ -26,3 +26,10 @@ h1 {
 .product-image:hover {
    filter: none;
 }
+
+p {
+   font-size: 25px;
+   color: #636363;
+   text-transform: uppercase;
+   font-family: 'Poppins', sans-serif;
+}
