--- a/store.css
+++ b/store.css
@@ -1,6 +1,7 @@
 * {
    text-align: center;
    overflow-x: hidden;
+   align-items: center;
 }
 
 h1 {
@@ -32,4 +33,23 @@ p {
    color: #636363;
    text-transform: uppercase;
    font-family: 'Poppins', sans-serif;
+   position: relative;
+   top: 0px;
+   transition: .5s;
 }
+
+.product:hover p {
+   background-color: #000;
+   color: #fff;
+   padding: 20px;
+}
+
+.product:hover {
+   background-color: #000;
+}
+
+ .product {
+    transition: .5s;
+    width: 350px;
+    margin: 25px 18%;
+ }
