--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,51 @@ a:hover:after {
   width: 100%;
   left: 0;
 }
+
+/*
+
+a {
+   color: #6e6e6e;
+   font-family: 'Poppins', sans-serif;
+   text-decoration: none;
+   font-size: 50px;
+   position: relative;
+   height: 150px;
+   width: 500px;
+   margin-left: -80px;
+   padding: 2px 45px;
+}
+
+a:before {
+   content: "";
+   position: absolute;
+   height: 200px;
+   width: 500px;
+   top: -25px;
+   left: -5px;
+   border-left: 5px solid cyan;
+   border-right: 5px solid #fdc518;
+   transition: all 1s;
+}
+
+a:after {
+   content: "";
+   position: absolute;
+   height: 150px;
+   width: 550px;
+   top: -5px;
+   left: -25px;
+   border-top: 5px solid cyan;
+   border-bottom: 5px solid #fdc518;
+   transition: all 1s;
+   transition-delay: 0.2s;
+}
+
+a:hover:before {
+   transform: rotateY(180deg);
+}
+
+a:hover:after {
+   transform: rotateX(180deg);
+}
+*/
